--- a/sass/_slick.sass
+++ b/sass/_slick.sass
@@ -15,6 +15,7 @@
 	&:hover
 		.slick-prev, .slick-next
 			+transform(translateX(0))
+			opacity: 1 
 .slick-list
 	position: relative
 	overflow: hidden
@@ -108,14 +109,21 @@
 		height: 82px
 		line-height: 82px
 		+gpu
+	.gallery &
+		opacity: 0
+		+transition(opacity 300ms, transform 300ms) 	
 	+r(1024)
 		opacity: 0 	
 .slick-prev
 	left: 12px
 	+s(prev)
+	.gallery &
+		+transform(translateX(-12px))
 .slick-next
 	right: 12px
 	+s(next)
+	.gallery &
+		+transform(translateX(12px))
 .slick-dots
 	text-align: center
 	position: absolute
