--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -73,6 +73,8 @@ body
 	margin: 0 auto
 	background: #fff
 	padding: 0 25px
+	+r(1024)
+		padding: 0 0 0 25px
 	+r(767)
 		padding: 0 
 		+display-flex
