--- a/css/screen.css
+++ b/css/screen.css
@@ -292,18 +292,18 @@ h4, .h4 { font-size: 18px; }
 .article blockquote a:hover { text-decoration: none; }
 
 .gallery { margin-bottom: 30px; }
+@media only screen and (max-width: 767px) { .gallery { margin-bottom: 0; } }
 
 @media only screen and (max-width: 767px) { .adv { padding: 0 8px; } }
 .adv .adv__list { font-size: 0; }
 .adv .adv__item { display: inline-block; vertical-align: top; *zoom: 1; width: 50%; margin-bottom: 30px; }
 .adv .adv__item:after { content: " "; display: table; clear: both; }
 @media only screen and (max-width: 900px) { .adv .adv__item { width: 100%; } }
-@media only screen and (max-width: 767px) { .adv .adv__item { margin-bottom: 10px; } }
 .adv .adv__icon { width: 81px; float: left; margin-right: 7%; }
 .adv .adv__text { overflow: hidden; padding-right: 7%; }
-.adv .adv__text p { font-size: 17px; color: #222; text-align: left; font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; }
-@media only screen and (max-width: 767px) { .adv .adv__text .h3 { margin-bottom: 8px; }
-  .adv .adv__text p { margin-bottom: 0; } }
+.adv .adv__text .h3 { margin-bottom: 10px; }
+.adv .adv__text p { font-size: 17px; color: #222; text-align: left; font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; margin-bottom: 0; }
+@media only screen and (max-width: 767px) { .adv .adv__text .h3 { margin-bottom: 8px; } }
 
 .history > p { margin-bottom: 34px; }
 .history .h1 { margin-bottom: 31px; }
@@ -636,9 +636,9 @@ h4, .h4 { font-size: 18px; }
 .slick-slide { float: left; height: 100%; min-height: 1px; overflow: hidden; display: none; }
 .slick-slide img { display: block; min-width: 100%; min-height: 100%; }
 @media only screen and (max-width: 767px) { .slick-slide img { position: absolute; left: 50%; -moz-transform: translateX(-50%); -ms-transform: translateX(-50%); -webkit-transform: translateX(-50%); transform: translateX(-50%); } }
-.media .slick-slide img { min-height: 1px; }
-@media only screen and (max-width: 767px) { .media .slick-slide { height: auto; }
-  .media .slick-slide img { position: relative; left: auto; width: 100%; height: auto; -moz-transform: translateX(0); -ms-transform: translateX(0); -webkit-transform: translateX(0); transform: translateX(0); } }
+.media .slick-slide img, .gallery .slick-slide img { min-height: 1px; }
+@media only screen and (max-width: 767px) { .media .slick-slide, .gallery .slick-slide { height: auto; }
+  .media .slick-slide img, .gallery .slick-slide img { position: relative; left: auto; width: 100%; height: auto; -moz-transform: translateX(0); -ms-transform: translateX(0); -webkit-transform: translateX(0); transform: translateX(0); } }
 .slick-slide.slick-loading img { display: none; }
 .slick-slide.dragging img { pointer-events: none; }
 .slick-initialized .slick-slide { display: block; }
@@ -649,7 +649,7 @@ h4, .h4 { font-size: 18px; }
 .slick-prev:focus, .slick-next:focus { outline: none; }
 .slick-prev.slick-disabled, .slick-next.slick-disabled { opacity: 0.2; }
 .slick-prev:before, .slick-next:before { height: 82px; line-height: 82px; -moz-transform: translate3d(0, 0, 0); -ms-transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
-.gallery .slick-prev, .gallery .slick-next { opacity: 0; -moz-transition: opacity 300ms, -moz-transform 300ms; -o-transition: opacity 300ms, -o-transform 300ms; -webkit-transition: opacity 300ms, -webkit-transform 300ms; transition: opacity 300ms, transform 300ms; }
+.gallery .slick-prev, .gallery .slick-next { opacity: 0; visibility: hidden; pointer-events: none; -moz-transition: opacity 300ms, -moz-transform 300ms; -o-transition: opacity 300ms, -o-transform 300ms; -webkit-transition: opacity 300ms, -webkit-transform 300ms; transition: opacity 300ms, transform 300ms; }
 @media only screen and (max-width: 1024px) { .slick-prev, .slick-next { opacity: 0; } }
 
 .slick-prev { left: 12px; background: url('../img/icons-s4f1ecb2486.png') 0 -1073px no-repeat; width: 26px; height: 55px; }
@@ -669,6 +669,8 @@ h4, .h4 { font-size: 18px; }
 .media .slick-dots { bottom: 0; }
 @media only screen and (max-width: 600px) { .media .slick-dots { width: 100%; }
   .media .slick-dots li { padding: 0 5px; } }
+@media only screen and (max-width: 767px) { .gallery .slick-dots { right: 20px; bottom: 15px; -moz-transform: translateX(0); -ms-transform: translateX(0); -webkit-transform: translateX(0); transform: translateX(0); }
+  .gallery .slick-dots li { padding: 0 5px; } }
 
 .fancybox-wrap, .fancybox-skin, .fancybox-outer, .fancybox-inner, .fancybox-image { padding: 0; margin: 0; border: 0; outline: none; vertical-align: top; }
 
