--- a/sass/_slick.sass
+++ b/sass/_slick.sass
@@ -70,7 +70,7 @@
 			position: absolute
 			left: 50%
 			+transform(translateX(-50%))		
-	.media &
+	.media &, .gallery &
 		img
 			min-height: 1px
 		+r(767)
@@ -111,6 +111,8 @@
 		+gpu
 	.gallery &
 		opacity: 0
+		visibility: hidden
+		pointer-events: none
 		+transition(opacity 300ms, transform 300ms) 	
 	+r(1024)
 		opacity: 0 	
@@ -159,4 +161,17 @@
 		+r(600)
 			width: 100%
 			li
-				padding: 0 5px 	
+				padding: 0 5px
+	.gallery &
+		+r(767)
+			right: 20px
+			bottom: 15px
+			+transform(translateX(0))	
+			li
+				padding: 0 5px 			 	
+				
+
+
+
+
+
