--- a/sass/_andrew.sass
+++ b/sass/_andrew.sass
@@ -156,7 +156,7 @@ $green1-l: #b8ce48
 	.doctor__img
 		width: 212px
 		float: left
-		margin-right: 32px
+		margin-right: 29px
 		margin-bottom: 30px
 		font-size: 0
 		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12)
@@ -186,7 +186,7 @@ $green1-l: #b8ce48
 			display: block	
 	.doctor__spec
 		border: 1px solid #cecece
-		padding: 20px 0
+		padding: 16px 0
 		border-width: 1px 0
 		margin-bottom: 30px
 		font-size: 15px
@@ -196,6 +196,7 @@ $green1-l: #b8ce48
 		+r(768)
 			margin-bottom: 25px	
 	.doctor__education
+		+pfdin
 		.h3
 			+r(767)
 				margin-bottom: 10px 
