--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -13,7 +13,12 @@
 =light
 	font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif 
 	font-style: normal
-	font-weight: normal	
+	font-weight: normal
++font(Conv_PFDinDisplayPro-Light, Conv_PFDinDisplayPro-Light)
+=pfdin
+	font-family: 'Conv_PFDinDisplayPro-Light', Arial, sans-serif
+	font-weight: normal
+	font-style: normal	
 
 // vars
 $dark: #222
