--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -308,7 +308,7 @@
 		padding-bottom: 25px
 		border-bottom: 1px solid #b7c380
 		margin-bottom: 25px
-		+light
+		+pfdin
 		&:before
 			content: ""
 			position: absolute
@@ -409,7 +409,7 @@
 	margin-left: 47px
 	margin-bottom: 25px
 	+r(900)
-		width: 212px
+		width: 200px
 		margin-left: 25px
 	+r(767)
 		width: 100%
@@ -427,7 +427,7 @@
 		padding: 0 10px
 		+order(1) 
 .article	
-	+light	
+	+pfdin
 	margin-bottom: 45px
 	h1
 		margin-bottom: 25px
@@ -518,6 +518,7 @@
 				margin-bottom: 0
 				font-size: 15px
 				color: $dark
+				+pfdin
 			+r(900)
 				width: 100%
 				padding-right: 0
@@ -1070,6 +1071,7 @@
 			left: 0
 			+transform(translateY(-50%))			
 .route
+	+pfdin
 	.h1
 		margin-bottom: 30px
 	.h2, .h3
@@ -1089,22 +1091,25 @@
 		width: 25%
 		font-size: 17px
 		color: #969696
-		padding-right: 5px 
+		padding-right: 5px
+		+proximanova 
 		p
 			color: $dark
 			margin-bottom: 0
 			font-size: 15px
 			text-align: left
+			+pfdin
 			span
 				display: inline-block
 				margin-left: 10px
 		a
+			+pfdin
 			color: $dark
 			font-size: 15px
 			&:hover
 				text-decoration: none
 		a.number
-			+light
+			+pfdin
 			color: $dark
 			margin-left: 0
 			&.number_viber
