--- a/css/screen.css
+++ b/css/screen.css
@@ -28,6 +28,7 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 @font-face { font-family: ProximaNova-Regular; src: url("fonts/ProximaNova-Regular.eot"); src: url("fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("fonts/ProximaNova-Regular.woff2") format("woff2"), url("fonts/ProximaNova-Regular.woff") format("woff"), url("fonts/ProximaNova-Regular.ttf") format("truetype"); font-weight: normal; font-style: normal; }
 @font-face { font-family: MarkSimonsonProximaNovaSemibold; src: url("fonts/MarkSimonsonProximaNovaSemibold.eot"); src: url("fonts/MarkSimonsonProximaNovaSemibold.eot?#iefix") format("embedded-opentype"), url("fonts/MarkSimonsonProximaNovaSemibold.woff2") format("woff2"), url("fonts/MarkSimonsonProximaNovaSemibold.woff") format("woff"), url("fonts/MarkSimonsonProximaNovaSemibold.ttf") format("truetype"); font-weight: normal; font-style: normal; }
 @font-face { font-family: MarkSimonsonProximaNovaLight; src: url("fonts/MarkSimonsonProximaNovaLight.eot"); src: url("fonts/MarkSimonsonProximaNovaLight.eot?#iefix") format("embedded-opentype"), url("fonts/MarkSimonsonProximaNovaLight.woff2") format("woff2"), url("fonts/MarkSimonsonProximaNovaLight.woff") format("woff"), url("fonts/MarkSimonsonProximaNovaLight.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+@font-face { font-family: Conv_PFDinDisplayPro-Light; src: url("fonts/Conv_PFDinDisplayPro-Light.eot"); src: url("fonts/Conv_PFDinDisplayPro-Light.eot?#iefix") format("embedded-opentype"), url("fonts/Conv_PFDinDisplayPro-Light.woff2") format("woff2"), url("fonts/Conv_PFDinDisplayPro-Light.woff") format("woff"), url("fonts/Conv_PFDinDisplayPro-Light.ttf") format("truetype"); font-weight: normal; font-style: normal; }
 body { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 17px; line-height: 25px; color: #222; background: #eaeaea; }
 
 .out { max-width: 1158px; margin: 0 auto; background: #fff; }
@@ -237,7 +238,7 @@ h4, .h4 { font-size: 18px; }
   .media__col .comm .comm__item { padding-bottom: 35px; } }
 .comm .slider__item { height: 240px; padding: 2px; }
 .comm .comm__item { font-size: 17px; color: #222; }
-.comm .comm__text { position: relative; padding-bottom: 25px; border-bottom: 1px solid #b7c380; margin-bottom: 25px; font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; }
+.comm .comm__text { position: relative; padding-bottom: 25px; border-bottom: 1px solid #b7c380; margin-bottom: 25px; font-family: "Conv_PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; }
 .comm .comm__text:before { content: ""; position: absolute; bottom: -11px; left: 48px; background: url('../img/icons-s4f1ecb2486.png') 0 -1138px no-repeat; width: 17px; height: 11px; }
 
 .footer .footer__in { max-width: 1158px; margin: 0 auto; background: #7d9601; text-align: center; padding: 35px 25px 10px; }
@@ -270,14 +271,14 @@ h4, .h4 { font-size: 18px; }
   .mob-menu .mob-menu__close { top: 22px; right: 16px; } }
 
 .sidebar { width: 247px; float: right; margin-left: 47px; margin-bottom: 25px; }
-@media only screen and (max-width: 900px) { .sidebar { width: 212px; margin-left: 25px; } }
+@media only screen and (max-width: 900px) { .sidebar { width: 200px; margin-left: 25px; } }
 @media only screen and (max-width: 767px) { .sidebar { width: 100%; margin-bottom: 0; float: none; margin-left: 0; -webkit-order: 2; order: 2; } }
 
 .content { overflow: hidden; }
 .content p { margin-bottom: 20px; }
 @media only screen and (max-width: 767px) { .content { width: 100%; overflow: visible; padding: 0 10px; -webkit-order: 1; order: 1; } }
 
-.article { font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; margin-bottom: 45px; }
+.article { font-family: "Conv_PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; margin-bottom: 45px; }
 .article h1 { margin-bottom: 25px; }
 .article h2 { margin: 40px 0 19px; }
 .article img { display: block; width: 100%; }
@@ -310,7 +311,7 @@ h4, .h4 { font-size: 18px; }
 .history .history__list { font-size: 0; }
 .history .history__list .history__item { display: inline-block; vertical-align: top; width: 50%; margin-bottom: 30px; padding-right: 7%; }
 .history .history__list .history__item .h3 { line-height: 1.4; margin-bottom: 13px; }
-.history .history__list .history__item p { margin-bottom: 0; font-size: 15px; color: #222; }
+.history .history__list .history__item p { margin-bottom: 0; font-size: 15px; color: #222; font-family: "Conv_PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; }
 @media only screen and (max-width: 900px) { .history .history__list .history__item { width: 100%; padding-right: 0; } }
 .history .history__list .history__year { position: relative; font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 36px; padding-bottom: 27px; margin-bottom: 17px; }
 .history .history__list .history__year:after { content: ""; position: absolute; bottom: 0; left: 0; width: 82px; height: 4px; background: #bed746; }
@@ -485,17 +486,18 @@ h4, .h4 { font-size: 18px; }
 .number-list .number { position: relative; padding-left: 35px; margin-bottom: 0; }
 .number-list .number span { position: absolute; top: 50%; left: 0; -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); -webkit-transform: translateY(-50%); transform: translateY(-50%); }
 
+.route { font-family: "Conv_PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; }
 .route .h1 { margin-bottom: 30px; }
 .route .h2, .route .h3 { margin-bottom: 5px; }
 .route > p { color: #222; font-size: 15px; }
 .route .route__row { font-size: 0; border-top: 1px solid #cecece; padding: 30px 0; }
 .route .route__row:first-child { border-top: none; }
-.route .route__col { display: inline-block; vertical-align: top; width: 25%; font-size: 17px; color: #969696; padding-right: 5px; }
-.route .route__col p { color: #222; margin-bottom: 0; font-size: 15px; text-align: left; }
+.route .route__col { display: inline-block; vertical-align: top; width: 25%; font-size: 17px; color: #969696; padding-right: 5px; font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; }
+.route .route__col p { color: #222; margin-bottom: 0; font-size: 15px; text-align: left; font-family: "Conv_PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; }
 .route .route__col p span { display: inline-block; margin-left: 10px; }
-.route .route__col a { color: #222; font-size: 15px; }
+.route .route__col a { font-family: "Conv_PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; color: #222; font-size: 15px; }
 .route .route__col a:hover { text-decoration: none; }
-.route .route__col a.number { font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; color: #222; margin-left: 0; }
+.route .route__col a.number { font-family: "Conv_PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; color: #222; margin-left: 0; }
 .route .route__col a.number.number_viber { color: #b580e0; }
 .route .route__col a.number.number_skype { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 15px; color: #00aeec; }
 .route .route__col a.number.number_mail { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; color: #222; overflow: hidden; -ms-text-overflow: ellipsis; text-overflow: ellipsis; white-space: nowrap; }
@@ -578,7 +580,7 @@ h4, .h4 { font-size: 18px; }
 .doctor .doctor__topper { *zoom: 1; padding-left: 2px; }
 .doctor .doctor__topper:after { content: " "; display: table; clear: both; }
 @media only screen and (max-width: 568px) { .doctor .doctor__topper { text-align: center; } }
-.doctor .doctor__img { width: 212px; float: left; margin-right: 32px; margin-bottom: 30px; font-size: 0; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12); }
+.doctor .doctor__img { width: 212px; float: left; margin-right: 29px; margin-bottom: 30px; font-size: 0; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12); }
 .doctor .doctor__img img { display: block; width: 100%; max-width: 212px; height: auto; }
 @media only screen and (max-width: 767px) { .doctor .doctor__img { margin-bottom: 10px; } }
 @media only screen and (max-width: 568px) { .doctor .doctor__img { float: none; margin-right: 0; display: inline-block; text-align: center; margin-bottom: 20px; } }
@@ -586,9 +588,10 @@ h4, .h4 { font-size: 18px; }
 .doctor .doctor__about p { font-size: 15px; color: #222; }
 @media only screen and (max-width: 767px) { .doctor .doctor__about p { margin-bottom: 10px; } }
 @media only screen and (max-width: 568px) { .doctor .doctor__about { overflow: visible; display: block; } }
-.doctor .doctor__spec { border: 1px solid #cecece; padding: 20px 0; border-width: 1px 0; margin-bottom: 30px; font-size: 15px; }
+.doctor .doctor__spec { border: 1px solid #cecece; padding: 16px 0; border-width: 1px 0; margin-bottom: 30px; font-size: 15px; }
 .doctor .doctor__spec strong { font-size: 19px; font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; }
 @media only screen and (max-width: 768px) { .doctor .doctor__spec { margin-bottom: 25px; } }
+.doctor .doctor__education { font-family: "Conv_PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; }
 @media only screen and (max-width: 767px) { .doctor .doctor__education .h3 { margin-bottom: 10px; } }
 .doctor .doctor__education p { margin: 10px 0; }
 @media only screen and (max-width: 568px) { .doctor .article ul { text-align: center; }
