--- a/sass/_andrew.sass
+++ b/sass/_andrew.sass
@@ -5,7 +5,7 @@ $green1-l: #b8ce48
 		+r(767)
 			text-align: center
 	.h1
-		margin-bottom: 30px
+		margin-bottom: 25px
 	.license__list
 		font-size: 0
 		margin-left: -3%
@@ -20,7 +20,7 @@ $green1-l: #b8ce48
 		display: inline-block
 		vertical-align: top
 		width: 22%
-		margin: 40px 0 28px 3%
+		margin: 25px 0 0 3%
 		+r(900)
 			width: 30%
 			margin-left: 3.3%
@@ -29,8 +29,7 @@ $green1-l: #b8ce48
 			margin-left: 5% 
 		+r(360)
 			width: 100%
-			margin-left: 0
-			margin-top: 0 		
+			margin-left: 0	
 		a
 			display: block
 			text-decoration: none
@@ -176,7 +175,7 @@ $green1-l: #b8ce48
 	.doctor__about
 		overflow: hidden
 		p
-			font-size: 15px
+			font-size: 17px
 			color: $dark
 		+r(767)
 			p
@@ -189,7 +188,7 @@ $green1-l: #b8ce48
 		padding: 16px 0
 		border-width: 1px 0
 		margin-bottom: 30px
-		font-size: 15px
+		font-size: 17px
 		strong
 			font-size: 19px
 			+semibold
