--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -128,7 +128,9 @@ h2, .h2
 	margin-bottom: 30px
 h3, .h3
 	font-size: 19px
-	+semibold			
+	+semibold
+	+r(767)
+		text-align: center			
 h4, .h4
 	font-size: 18px		
 .btn
