--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -499,6 +499,8 @@
 			.h3
 				margin-bottom: 8px										
 .history
+	+r(767)
+		text-align: center
 	& > p
 		margin-bottom: 34px
 	.h1
@@ -516,7 +518,7 @@
 				margin-bottom: 13px
 			p
 				margin-bottom: 0
-				font-size: 15px
+				font-size: 17px
 				color: $dark
 				+pfdin
 			+r(900)
@@ -536,6 +538,11 @@
 				width: 82px
 				height: 4px
 				background: #bed746
+			+r(767)
+				display: inline-block
+				&:after
+					left: 50%
+					margin-left: -41px	
 // form				
 .form
 	&.form_half
@@ -839,6 +846,9 @@
 		+light
 		font-size: 28px
 		margin-bottom: 20px
+		+r(768)
+			font-size: 24px
+			line-height: 34px 
 		
 // treatment
 .treatment
