--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -14,9 +14,9 @@
 	font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif 
 	font-style: normal
 	font-weight: normal
-+font(Conv_PFDinDisplayPro-Light, Conv_PFDinDisplayPro-Light)
++font(PFDinDisplayPro-Light, PFDinDisplayPro-Light)
 =pfdin
-	font-family: 'Conv_PFDinDisplayPro-Light', Arial, sans-serif
+	font-family: 'PFDinDisplayPro-Light', Arial, sans-serif
 	font-weight: normal
 	font-style: normal	
 
