--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -489,11 +489,12 @@
 		padding-right: 7%
 		.h3
 			margin-bottom: 10px
+			text-align: left
 		p
 			font-size: 17px
 			color: $dark
 			text-align: left
-			+light
+			+pfdin
 			margin-bottom: 0
 		+r(767)
 			.h3
