--- a/sass/_andrew.sass
+++ b/sass/_andrew.sass
@@ -128,6 +128,7 @@ $green1-l: #b8ce48
 			display: block
 			width: 100%
 			height: auto
+			box-shadow: -1.5px 2.6px 5px rgba(0, 0, 0, 0.12)
 	.date
 		margin-bottom: 39px
 		+r(767)
