--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -436,6 +436,7 @@
 	img
 		display: block
 		width: 100%
+		box-shadow: -1.5px 2.6px 5px rgba(0, 0, 0, 0.12)
 	img[align="left"]
 		display: block
 		width: 50%
@@ -469,6 +470,8 @@
 // advantages
 .adv
 	+r(767)
+		& > p
+			text-align: center
 		padding: 0 8px 
 	.adv__list
 		font-size: 0
