sticky footer added

--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -70,8 +70,13 @@ body
 // common blocks      
 .out
 	max-width: 1158px
-	margin: 0 auto
+	min-height: 100%
+	height: auto !important
+	height: 100%
+	margin: 0 auto -205px
 	background: #fff
+.push
+	height: 205px 	
 .main
 	+clr
 	max-width: 1158px
