--- a/css/screen.css
+++ b/css/screen.css
@@ -31,7 +31,9 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 @font-face { font-family: PFDinDisplayPro-Light; src: url("fonts/PFDinDisplayPro-Light.eot"); src: url("fonts/PFDinDisplayPro-Light.eot?#iefix") format("embedded-opentype"), url("fonts/PFDinDisplayPro-Light.woff2") format("woff2"), url("fonts/PFDinDisplayPro-Light.woff") format("woff"), url("fonts/PFDinDisplayPro-Light.ttf") format("truetype"); font-weight: normal; font-style: normal; }
 body { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 17px; line-height: 25px; color: #222; background: #eaeaea; }
 
-.out { max-width: 1158px; margin: 0 auto; background: #fff; }
+.out { max-width: 1158px; min-height: 100%; height: auto !important; height: 100%; margin: 0 auto -205px; background: #fff; }
+
+.push { height: 205px; }
 
 .main { *zoom: 1; max-width: 1158px; margin: 0 auto; background: #fff; padding: 0 25px; }
 .main:after { content: " "; display: table; clear: both; }
@@ -495,17 +497,17 @@ h4, .h4 { font-size: 18px; }
 .route { font-family: "PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; }
 .route .h1 { margin-bottom: 30px; }
 .route .h2, .route .h3 { margin-bottom: 5px; }
-.route > p { color: #222; font-size: 15px; }
+.route > p { color: #222; font-size: 17px; }
 .route .route__row { font-size: 0; border-top: 1px solid #cecece; padding: 30px 0; }
 .route .route__row:first-child { border-top: none; }
 .route .route__col { display: inline-block; vertical-align: top; width: 25%; font-size: 17px; color: #969696; padding-right: 5px; font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; }
-.route .route__col p { color: #222; margin-bottom: 0; font-size: 15px; text-align: left; font-family: "PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; }
+.route .route__col p { color: #222; margin-bottom: 0; font-size: 17px; text-align: left; font-family: "PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; }
 .route .route__col p span { display: inline-block; margin-left: 10px; }
-.route .route__col a { font-family: "PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; color: #222; font-size: 15px; }
+.route .route__col a { font-family: "PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; color: #222; font-size: 17px; }
 .route .route__col a:hover { text-decoration: none; }
-.route .route__col a.number { font-family: "PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; color: #222; margin-left: 0; }
+.route .route__col a.number { font-family: "PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; color: #222; font-size: 17px; margin-left: 0; }
 .route .route__col a.number.number_viber { color: #b580e0; }
-.route .route__col a.number.number_skype { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 15px; color: #00aeec; }
+.route .route__col a.number.number_skype { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; color: #00aeec; }
 .route .route__col a.number.number_mail { font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; color: #222; overflow: hidden; -ms-text-overflow: ellipsis; text-overflow: ellipsis; white-space: nowrap; }
 .route .route__col.small { width: 16%; }
 .route .route__col.wide { width: 84%; font-size: 0; }
@@ -521,6 +523,7 @@ h4, .h4 { font-size: 18px; }
   .number-list .route .route__col.wide .route__col.info .number { margin-bottom: 5px; }
   .route .route__col.small { width: 25%; }
   .route .route__col.info { width: 75%; } }
+@media only screen and (max-width: 568px) { .route .route__col .number.number_skype, .route .route__col .number.number_mail { font-size: 15px; } }
 
 .success { padding-top: 8px; }
 .success .success__title { margin-bottom: 30px; font-family: "MarkSimonsonProximaNovaLight", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 36px; }
