--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -944,7 +944,9 @@
 	.h1
 		margin-bottom: 25px
 	& > p
-		margin-bottom: 35px	
+		margin-bottom: 35px
+		+r(767)
+			text-align: center	
 	.doctors__list
 		padding-left: 4px
 	.doctors__item
