--- a/css/screen.css
+++ b/css/screen.css
@@ -80,8 +80,8 @@ h4, .h4 { font-size: 18px; }
 @media only screen and (max-width: 480px) { .grid .grid__item { width: 100%; margin-left: 0; text-align: left; } }
 .main-wrap .grid { margin-left: -1%; }
 .main-wrap .grid .grid__item { width: 32.3%; margin-left: 1%; }
-@media only screen and (max-width: 768px) { .main-wrap .grid { margin-left: -5%; }
-  .main-wrap .grid .grid__item { width: 45%; margin-left: 5%; margin-bottom: 18px; } }
+@media only screen and (max-width: 768px) { .main-wrap .grid { margin-left: -3%; }
+  .main-wrap .grid .grid__item { width: 47%; margin-left: 3%; margin-bottom: 18px; } }
 @media only screen and (max-width: 600px) { .main-wrap .grid { margin-left: 0; }
   .main-wrap .grid .grid__item { width: 100%; margin-left: 0; } }
 
@@ -436,7 +436,7 @@ h4, .h4 { font-size: 18px; }
 .treatment .treatment__list li a { color: #acacac; font-size: 15px; line-height: 1.5; text-decoration: underline; }
 .treatment .treatment__list li a:hover { text-decoration: none; }
 
-.price { padding: 25px 0 0 25px; border-top: 1px solid #7e960d; }
+.price { padding: 25px 0 0 25px; border-top: 1px solid #7e960d; font-family: "PFDinDisplayPro-Light", Arial, sans-serif; font-weight: normal; font-style: normal; }
 .price:first-child { border-top: none; }
 @media only screen and (max-width: 568px) { .price { text-align: center; padding: 20px 20px 0; } }
 .price .price__table { display: table; width: 100%; table-layout: fixed; border-collapse: collapse; }
