--- a/sass/_slick.sass
+++ b/sass/_slick.sass
@@ -110,12 +110,15 @@
 		line-height: 82px
 		+gpu
 	.gallery &
-		opacity: 0
-		visibility: hidden
-		pointer-events: none
+		opacity: 0 
 		+transition(opacity 300ms, transform 300ms) 	
 	+r(1024)
 		opacity: 0 	
+	+r(767)
+		.gallery &
+			opacity: 0
+			visibility: hidden
+			pointer-events: none	
 .slick-prev
 	left: 12px
 	+s(prev)
