--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1129,7 +1129,7 @@
 			+pfdin
 			span
 				display: inline-block
-				margin-left: 10px
+				margin-right: 10px
 		a
 			+pfdin
 			color: $dark
@@ -1166,10 +1166,10 @@
 				max-width: 100%
 				+text-overflow
 		+r(1024)
-			font-size: 15px
+			font-size: 17px
 			margin-bottom: 5px
 			p
-				font-size: 15px
+				font-size: 17px
 		+r(768)
 			&.wide
 				width: 75% 
