--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -585,7 +585,9 @@
 			&:before
 				display: block
 	.form__submit
-		text-align: center				
+		+r(767)
+			margin-bottom: 10px
+			text-align: center				
 .input, .textarea
 	display: block
 	text-align: left
