--- a/css/screen.css
+++ b/css/screen.css
@@ -333,7 +333,7 @@ h4, .h4 { font-size: 18px; }
 .form .form__row:before { content: "*"; position: absolute; top: 16px; left: 0; font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; color: #e38600; z-index: 2; display: none; }
 .form .form__row > p { margin-bottom: 15px; font-family: "MarkSimonsonProximaNovaSemibold", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; }
 .form .form__row.require:before { display: block; }
-.form .form__submit { text-align: center; }
+@media only screen and (max-width: 767px) { .form .form__submit { margin-bottom: 10px; text-align: center; } }
 
 .input, .textarea { display: block; text-align: left; }
 .input input, .input textarea, .textarea input, .textarea textarea { width: 100%; height: 55px; padding: 0 16px; border-bottom: 2px solid #cecece; border-width: 0 0 2px 0; font-family: "ProximaNova-Regular", Arial, sans-serif; font-style: normal; font-weight: normal; font-size: 19px; color: #222; -moz-transition: border-color 300ms; -o-transition: border-color 300ms; -webkit-transition: border-color 300ms; transition: border-color 300ms; }
