--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -638,7 +638,9 @@
 		bottom: -12px	
 	.form_half &
 		&:after
-			bottom: 30px
+			bottom: 10px
+		.error__alert
+			bottom: -17px
 	&.is-focused
 		&:after
 			+arr(13, 9, #7d9601, br)
