--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -657,11 +657,9 @@
 	text-align: left
 	.radio
 		float: right
-		width: 200px
+		width: 45%
 		&:first-child
-			float: left
-		+r(768)
-			width: 45% 	 		
+			float: left	 		
 .radio
 	position: relative
 	display: block
@@ -688,7 +686,7 @@
 			color: $dark
 		p
 			font-size: 15px
-			color: #c5c5c5
+			color: #7c7c7c
 			+pfdin
 			line-height: 1.2
 	input:checked + div
